Fix typos in automap blog post

--- a/blog_professional/_posts/2018-05-23-automap.md
+++ b/blog_professional/_posts/2018-05-23-automap.md
@@ -26,7 +26,7 @@ If you're just looking for the publication itself, you can find the PDF [here](h
 
 We should start, actually, by defining genotype and phenotype.
 In biology, phenotype refers to an organism's observable characteristics (morphological, behavioral, physiological, chemical, etc.).
-Importantly, the phenotype governs an organism's ability to survive and reproduce, its fitness.
+Importantly, the phenotype governs an organism's ability to survive and reproduce --- in evolutionary terms, its fitness.
 In biology, genotype refers to the heritable information that shapes an organism's phenotype.
 This is typically equated with an organism's DNA content.
 Importantly, the genotype is heritable --- genetic information is passed from generation to generation with recombination (mixing and matching of two sets of parental genomes), in sexual organisms, and mutation (random changes to the genetic code).
@@ -75,7 +75,7 @@ What we see in the video are phenotypes, the bodies of these digital walkers tha
 
 So, what's going on with the genotypes?
 In the video above, a technique called [HyperNEAT](http://eplex.cs.ucf.edu/hyperNEATpage/) was used to define the genotype-phenotype map.
-We don't need to go into detail here, but you can think of the genotypes that were used a math equations.
+We don't need to go into detail here, but you can think of the genotypes that were used as math equations.
 To generate a phenotype for a particular genotype (math equation), the positions (e.g., x,y,z coordinates) of each voxel (each little cube of tissue that comprises the phenotype) are plugged into the math equation.
 Then, the outputs of the math equation determine what tissue type is placed at each location.
 Using the HyperNEAT genotype-phenotype map, genotypes tend to encode phenotypes composed of several contiguous swaths of a single tissue type (e.g., red contractile tissue).
@@ -113,9 +113,9 @@ For example --- a well known one! --- evolutionary techniques were successfully 
 
 *Evolved spacecraft antenna design [[Hornby et al., 2006]](#Hornby2006AutomatedAlgorithms).*
 
-For each domain, in order use evolutionary algorithms a genotype-phenotype map must be defined.
+For each domain, in order to use evolutionary algorithms a genotype-phenotype map must be defined.
 Unlike evolutionary biologists, digital evolution researchers are forced to think practically about how to define genotype-phenotype maps... and to think about it often.
-In each problem domain, some genotype-phenotype maps will outperform others: evolution will tend discover higher-quality phenotypes (e.g., faster soft-bodied walkers or better antennas) when certain genotype-phenotype maps are employed.
+In each problem domain, some genotype-phenotype maps will outperform others: evolution will tend to discover higher-quality phenotypes (e.g., faster soft-bodied walkers or better antennas) when certain genotype-phenotype maps are employed.
 
 Recall how, for the soft-bodied robot example we just covered, the indirect genotype-phenotype map tended to yield phenotypes with contiguous segments of the same tissue type while the direct genotype-phenotype map didn't.
 It turns out that soft-bodied robots with contiguous segments of the same tissue type tend to be better walkers because contiguous same-tissue voxels can act in concert to power locomotion.
@@ -147,7 +147,7 @@ We can also ascertain the frequency at which phenotypic variation that is *both*
 
 These twin capacities are essential to evolutionary search. Without any heritable variation, evolution would have no raw material to select from and would stagnate.
 Without any viable variation, evolution would select against all novelty and again stagnate.
-Hence, evolutionary innovation depends the production of heritable, novel phenotypic variation, some of which must not be severely deleterious.
+Hence, evolutionary innovation depends on the production of heritable, novel phenotypic variation, some of which must not be severely deleterious.
 
 Although the term is used somewhat inconsistently in the literature, most definitions of evolvability tie into:
 
@@ -195,7 +195,7 @@ Fundamentally, the indirect encoding takes advantage of the regularity in the ph
 By defining the phenotype using a math equation, the genotype-phenotype map largely filters out nonviable phenotypes --- genotypes get translated to phenotypes with large contiguous tissue segments and not hodgepodge phenotypes.
 Under the indirect genotype-phenotype map, the genotype space can be thought of as more compact than the phenotype space.
 Genotypes only correspond to a fraction of the possible phenotypes: the phenotypes that are potentially interesting for locomotion (i.e., phenotypes with contiguous tissue segments).
-It makes sense, then, because the genotype space is more compact that small changes in the genotype space can yield large changes in the phenotype space (i.e., novelty).
+It makes sense, then, because the genotype space is more compact small changes in the genotype space can yield large changes in the phenotype space (i.e., novelty).
 
 We'll return to play with these ideas more later on.
 In the meantime, let's dive into the technical core of the Automap approach: autoencoders.
@@ -232,7 +232,7 @@ Well, autoencoders can also be used to reconstruct a corrupted input.
 This works something like a police sketch, too.
 Suppose that the criminal was wearing pantyhose that partially obscured his face.
 The witness can still describe the suspect's face and the police artist can still draw it.
-Under the right conditions the missing part of the face can be reconstructed reasonably well.
+Under the right conditions, the missing part of the face can be reconstructed reasonably well.
 
 ![](https://osf.io/3s4ky/download){:width="100%"}
 
@@ -247,12 +247,12 @@ Again, because she's seen lots of faces the police artist doesn't need the witne
 We'll talk more about each of these two autoencoder superpowers separately.
 First, we'll cover bottlenecked autoencoders, which specifically focus on learning a compact representation for inputs.
 Then, we'll cover denoising autoencoders, which specifically focus on learning to fix corrupted inputs.
-It's certainly possible to have an autoencoder that both bottlenecks and denoises, but it's instructive to consider these two types of autoencoders separate.
+It's certainly possible to have an autoencoder that both bottlenecks and denoises, but it's instructive to consider these two types of autoencoders separately.
 
-But before, let's build an intuitive notion of exactly what autoencoders *are* and how they *learn*.
+But first, let's build an intuitive notion of exactly what autoencoders *are* and how they *learn*.
 Autoencoders fall under the umbrella of deep learning, a fancy (trendy) shorthand that just means multilayer artificial neural networks.
 Multilayer artificial neural networks themselves are just cleverly devised math equations.
-They're called artificial *neural* networks because their structure and function somewhat resembles how information is processed by networks of neurons in the brain.
+They're called artificial *neural* networks because their structure and function somewhat resemble how information is processed by networks of neurons in the brain.
 The moniker "deep learning" refers to the fact that these neural networks are really big: lots of layers and tens of thousands or more parameters.
 
 Even though there's lots of interesting mathematics and biological inspiration behind them, at the end of the day multilayer artificial neural networks are still just math equations.
@@ -267,15 +267,15 @@ This is how artificial neural networks learn.
 In some ways, you can think about this like studying with flashcards.
 You take a card out of the training deck, feed the input side of the flashcard (e.g., the animal image) one side of the math equation and check the output side of the flashcard (e.g., is it a cat?) against what came out of the other side of the math equation.
 If the was wrong, you adjust the parameters of the math equation to make its output less wrong next time.
-The cool superpower of deep learning that once these math equations have studied enough, they can often start to guess correctly on flashcards they haven't seen.
+The cool superpower of deep learning is that once these math equations have studied enough, they can often start to guess correctly on flashcards they haven't seen.
 For example, a smartspeaker might have never heard you say its keyword before but can usually detect it nevertheless.
 
 Making flashcards for autoencoders is easy.
-Remember that to take an input and then give that same input back to you.
+Remember that an autoencoer's goal is to take an input and then give that same input back to you.
 This means that both sides of the flashcard *are the same thing.*
-If we're trying to autoencoder that works like our police sketch example, we just need lots of pictures of faces.
+If we're trying to train an autoencoder that works like our police sketch example, we just need lots of pictures of faces.
 Then, we just make our flashcards by putting the faces on both sides.
-We train the autoencoder so that the each output face looks more and more like its corresponding input face.
+We train the autoencoder so that each output face looks more and more like its corresponding input face.
 If we really want to make sure that our autoencoder gets good at reconstruction faces from partial observations (like when the crook's wearing a burglar mask), we can take a sharpie and black out parts of the faces on the input side of the card.
 If we were training a smartspeaker to recognize a keyword, we would have to manually label the output sides of its flashcards as to whether the keyword was present.
 Because we don't have to label an autoencoder's flashcards manually, it's considered a form of *unsupervised* (or, more specifically, *self-supervised*) *learning*.
@@ -292,14 +292,13 @@ Here's a nice graphic showing a bottlenecked autoencoder in action on the MNIST 
 *Schematic of bottlenecked autoencoder in action on MNIST handwritten digit dataset.*
 *Graphic from [[Dertat, 2017]](#Dertat2017AppliedAutoencoders).*
 
-As you can see, a handwritten 4 goes in the left side and through the encoder (a multilayer artificial neural network) to produce the coded.
-You can see that the coded representation of the 4 is much more compact than the
-Has to figure out a way to represent the 4 without using all the pixels.
+As you can see, a handwritten 4 goes in the left side and through the encoder (a multilayer artificial neural network) to produce the more compact encoded representation.
+The encoder has to figure out a way to represent the 4 without just using all the raw pixels.
 Then, the code is read by the decoder (another mutlilayer artificial neural network) to generate the reconstruction seen on the right.
 The reconstruction looks very much like the original input, but if you look closely it's not an exact replica.
 If we were still training, we could use some derivative math to figure out how to adjust the parameters of the encoder and decoder to try to get output that resembles the original image even better.
 
-As you can see in below, the autoencoder works well across many different handwritten digits.
+As you can see in the example below, the autoencoder works well across many different handwritten digits.
 
 ![](https://osf.io/srzqm/download){:width="100%"}
 
@@ -326,9 +325,8 @@ To perform a latent space interpolation, we start with two handwritten digit ima
 We call the space the original images come from the pixel space.
 We use the encoder portion of the autoencoder to jump into the latent space (i.e., running the image through the encoder and looking at the) at the point of departure and the destination.
 Then, we traverse a direct path between the point of departure and the destination *in the latent space*.
-A direct path just means that we slowly increase the code elements of our point of departure in the latent space that need to increase in order to match our point of arrival in the latent space and slowly decrease the code elements of our point of departure in the latent space that need to decrease in order to match our point of arrival in the latent space.
-Code elements that are identical between the point of arrival and the point of departure just stay the same.
-All the while, we use the decoder portion of the autoencoder take snapshots of our progress through the latent space, passing our current position in the latent space through the decoder to yield an image representing our current position in the latent space.
+A direct path just means that we slowly interpolate between our point of departure in the latent space and our destination point in the latent space.
+All the while, we use the decoder portion of the autoencoder to take snapshots of our progress through the latent space, passing our current position in the latent space through the decoder to yield an image representing our current position in the latent space.
 
 The latent space interpolation we just described contrasts with the more rudimentary pixel space interpolation.
 
@@ -392,7 +390,7 @@ While traversing, the pixel space many intermediate steps were obviously not han
 
 Now, it's important to recognize that paths between digits where all the intermediate states look reasonably handwritten *do* exist in pixel space.
 (If you think about it, that's exactly what our projections from interpolations in latent space traced out.)
-However, that these paths are rare: we would have to trace a very specific, long, and circuitous route through pixel space to follow them; we couldn't just beat a direct path between points like we did in latent space.
+However, note that these paths are rare: we would have to trace a very specific, long, and circuitous route through pixel space to follow them; we couldn't just beat a direct path between points like we did in latent space.
 
 ### Denoising Autoencoder
 
@@ -403,7 +401,7 @@ Here's another nice graphic, this one showing a denoising autoencoder in action 
 *Schematic of denoising autoencoder in action on MNIST handwriting image.*
 *Graphic from [[Dertat, 2017]](#Dertat2017AppliedAutoencoders).*
 
-We start out with an image of a handwritten 4 from the MNIST dastaset on the left.
+We start out with an image of a handwritten 4 from the MNIST dataset on the left.
 Then, some static is added to corrupt the image.
 Importantly, to our eye the 4 is still recognizable... this is a good indication that the 4 has not been corrupted to the point where it is no longer recognizable.
 If we were to feed completely garbled static into the denoising autoencoder, there would be absolutely nothing to go off of to reconstruct the original image.
@@ -417,8 +415,8 @@ As we can see, the trained denoising autoencoder is capable of reconstructing al
 *Example of denoising autoencoder at work on noisy MNIST handwriting.*
 *Graphic from [[Dertat, 2017]](#Dertat2017AppliedAutoencoders).*
 
-Again this works because the autoencoder was trained on example .
-It has learned
+Again this works because the autoencoder was trained on example handwritten digits.
+It has learned the subset of images that qualify as a valid handwritten digit.
 Images that fall outside of that subset are simply mapped to a nearby image that qualifies as a valid handwritten digit.
 
 ## How To Use Autoencoders as a Genotype-Phenotype Map?
@@ -440,8 +438,8 @@ When visualizing a 3D fitness landscape, the phenotype is determined by two valu
 Here, we'll just look at landscapes where the x-y coordinates are phenotypic features.)
 Each individual x-y coordinate therefore corresponds to a particular phenotype.
 The fitness landscape is drawn as a surface that spans all possible x-y coordinates; the height of the surface represents the fitness of a particular phenotype with each x-y value.
-Because the progeny of high-fitness individuals from the previous generation are over-represented in successive generation (i.e., survival of the fittest), population (individual phenotype points on the fitness surface) tends to "climb" the surface.
-You can see this very clearly this animated excerpt from Bjørn Østman and Randy Olson's video.
+Because the progeny of high-fitness individuals from the previous generation are over-represented in the successive generation (i.e., survival of the fittest), a population (individual phenotype points on the fitness surface) tends to "climb" the surface.
+You can see this very nicely in an animated excerpt from Bjørn Østman and Randy Olson's video.
 
 ![](https://osf.io/64j9p/download){:width="100%"}
 
@@ -505,7 +503,7 @@ If we evolve a single population in this landscape using the direct genotype-phe
 *End state of a single population evolved using the direct genotype-phenotype mapping.*
 
 If we evolve several more populations in this landscape from different starting conditions, they will converge to different high-fitness hilltops.
-If we repeat with enough independent evolutionary runs, we start reveal a pattern in the distribution of high-fitness hilltops.
+If we repeat with enough independent evolutionary runs, we start to reveal a pattern in the distribution of high-fitness hilltops.
 
 ![](https://osf.io/p5s48/download){:width="100%"}
 
@@ -582,8 +580,8 @@ Importantly, this genotype-phenotype allows escape from local fitness peaks in t
 
 ## Thought Experiment: Evolving Police Composites
 
-In order to drive home the implications autoencoder genotype-phenotype maps on evolvability let's talk through a little thought experiment.
-Think back the problem of police face reconstruction we discussed before.
+In order to drive home the implications of autoencoder genotype-phenotype maps for evolvability let's talk through a little thought experiment.
+Think back to the problem of police face reconstruction we discussed before.
 Suppose we're trying to evolve a face that, as judged by the witness of a crime, maximally resembles the perpetrator.
 (Yes, this is a real thing people do [[Frowd et al., 2004]](#Frowd2004EvoFITComposites)).
 To accomplish this, we start out with a set of random genotypes that map to different phenotypes (images).
@@ -602,14 +600,14 @@ Evolving the composite using the direct genotype-phenotype map probably won't wo
 
 Would either of the two ideas be helpful?
 
-1. Instead having the genotype directly represent the image at the pixel level, encode genotypes analogously to a verbal description then use a police artist who can draw a suspect from verbal descriptions to generate phenotypes.
+1. Instead of having the genotype directly represent the image at the pixel level, encode genotypes analogously to a verbal description then use a police artist who can draw a suspect from verbal descriptions to generate phenotypes.
 2. Use a direct encoding as before, but before running images by the suspect have a police artist look at the (likely noisy) image and re-draw it as the most similar image that actually looks like a face.
 
 This is analogous to what the bottlenecked and denoising autoencoders, respectively, accomplish.
 I would argue that either of these ideas would be vastly superior to the direct genotype-phenotype map.
 As we'll see shortly, in some ways, autoencoders can (and do) quite literally accomplish this task with faces.
 
-(For those who are curious, software to evolve police composites use an indirect genotype-phenotype map based on eigenfaces [[Frowd et al., 2004]](#Frowd2004EvoFITComposites).)
+(For those who are curious, software to evolve police composites uses an indirect genotype-phenotype map based on eigenfaces [[Frowd et al., 2004]](#Frowd2004EvoFITComposites).)
 
 ## What's Actually in the Paper?
 
@@ -654,7 +652,7 @@ There's a lot of gas in the can to do some really cool things with AutoMap.
 Plus, deep learning and autoencoders an active area of research.
 As advances are made in the theory, software, and hardware behind autoencoders, AutoMap will continue to get more powerful.
 
-One more challenging application we're considering testing AutoMap on is on the soft-bodied robot problem covered earliner.
+One more challenging application we're considering testing AutoMap on is on the soft-bodied robot problem covered earlier.
 Can we learn a genotype-phenotype map that's even more evolvable than HyperNEAT?
 Can we use a more evolvable genotype-phenotype map to evolve soft-bodied robots that are even faster walkers?
 
@@ -669,7 +667,7 @@ It's a bot run by run by [Tom White](http://projects.drib.net/) that uses autoen
 
 According to the account's bio,
 
-> I take examine images of people and then add or remove smiles.
+> I take images of people and then add or remove smiles.
 > Reposting images from my Following list.
 > Bot created by [@dribnet](https://twitter.com/dribnet)
 
@@ -681,8 +679,7 @@ To add a smile to an image, you just use an autoencoder encoder to map your imag
 
 ### Theoretical Implications
 
-This work was, in part, inspired by recent efforts efforts to understand evolvability in terms of learning theory [[Kouvaris et al., 2017]](#Kouvaris2017HowOrganisation).
-One
+This work was, in part, inspired by recent efforts to understand evolvability in terms of learning theory [[Kouvaris et al., 2017]](#Kouvaris2017HowOrganisation).
 We hope that this work helps to strengthen an explicit connection between applied learning theory (i.e., machine learning) and evolvability.
 
 It should be noted that the AutoMap autoencoder mechanism, taken literally, obviously does not make a completely clean analogy to biological evolution.
@@ -758,7 +755,7 @@ How should we decide how big to make the bottleneck on bottlenecked autoencoders
 The only answers I can think of here are good heuristic guessing and trial and error.
 
 Finally, a somewhat more profound conundrum.
-Manually designing genotype-phenotype maps is heuristic, hard, time-consuming.
+Manually designing genotype-phenotype maps is heuristic, hard, and time-consuming.
 However, deep learning can often also be heuristic, hard, and time-consuming.
 Does AutoMap really make things any easier?
 
