Fix hstrat joss bibtex syntax

--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -28,10 +28,10 @@ bibtex: |-
   @article{moreno2022hstrat,
     doi = {10.21105/joss.04866},
     url = {https://doi.org/10.21105/joss.04866},
-    year = {2022}
+    year = {2022},
     publisher = {The Open Journal},
     volume = {7},
-    number = {80}
+    number = {80},
     pages = {4866}
     author = {Matthew Andres Moreno and Emily Dolson and Charles Ofria}, 
     title = {hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations},
