Bugfix: medium article is for outset, not teeplot

--- a/blog_efflux/_posts/2023-12-22-outset.md
+++ b/blog_efflux/_posts/2023-12-22-outset.md
@@ -23,4 +23,6 @@ bibtex: |-
     url = {https://doi.org/10.5281/zenodo.10426106}
   }
 citation: "Matthew Andres Moreno. (2023). mmore500/outset. Zenodo. https://doi.org/10.5281/zenodo.10426106"
+supporting_materials: |
+  - [*A Killer Fix for Scrunched Axes, Step-by-step*](https://towardsdatascience.com/unscrunch-your-axes-with-easy-multiscale-data-visualization-in-matplotlib-69a30e96c68f?source=friends_link&sk=df15b14b63ce5b5240e6058b5875f6ee), [article via towards data science](https://medium.com/towards-data-science)
 ---
