Update teeplot info

--- a/blog_efflux/_posts/2020-01-01-teeplot.md
+++ b/blog_efflux/_posts/2020-01-01-teeplot.md
@@ -10,5 +10,17 @@ authors:
 venue: Python package published via PyPI
 projects:
   - libraries
+bibtex: |-
+  @software{moreno2023teeplot,
+    author = {Matthew Andres Moreno},
+    title = {mmore500/teeplot},
+    month = dec,
+    year = 2023,
+    publisher = {Zenodo},
+    doi = {10.5281/zenodo.10440670},
+    url = {https://doi.org/10.5281/zenodo.10440670}
+  }
+citation: Matthew Andres Moreno. (2023). mmore500/teeplot. Zenodo. https://doi.org/10.5281/zenodo.10440670
 description: |
+  teeplot wrangles your data visualizations out of notebooks for you.
 ---
