Fix bibtex entry category

--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -24,7 +24,7 @@ abstract: |
   We find that selection pressure, spatial structure, and ecology have distinct effects on phylogenetic metrics, although these effects are complex and not always intuitive.
   We also find that, while low-resolution phylogenetic reconstructions can bias some phylogenetic metrics, high-resolution reconstructions recapitulate them faithfully.
 bibtex: |-
-  @proceedings{moreno2023toward,
+  @inproceedings{moreno2023toward,
     author = {Moreno, Matthew Andres and Dolson, Emily and Rodriguez-Papa, Santiago},
     title = "{Toward Phylogenetic Inference of Evolutionary Dynamics at Scale}",
     volume = {ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference},
