--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -32,7 +32,7 @@ bibtex: |-
     publisher = {The Open Journal},
     volume = {7},
     number = {80},
-    pages = {4866}
+    pages = {4866},
     author = {Matthew Andres Moreno and Emily Dolson and Charles Ofria},
     title = {hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations},
     journal = {Journal of Open Source Software}
