Add link toextended oee4 preprint

--- a/blog_efflux/_posts/2021-07-22-moreno2021case.md
+++ b/blog_efflux/_posts/2021-07-22-moreno2021case.md
@@ -33,6 +33,7 @@ bibtex: |-
   }
 citation: "Matthew Andres Moreno, Santiago Rodriguez Papa and Charles Ofria. 2021. Case Study of Novelty, Complexity, and Adaptation in a Multicellular System. OEE4: The Fourth Workshop on Open-Ended Evolution."
 supporting_materials: |
+  - [extended preprint](https://arxiv.org/abs/2405.07241) [via arXiv ☠️](https://arxiv.org)
   - [supplement](https://osf.io/gekc8/) [via Open Science Framework ❋](https://osf.io)
   - [data](https://osf.io/prq49/) [via Open Science Framework ❋](https://osf.io)
   - [source code](https://github.com/mmore500/dishtiny/tree/prq49) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
