List authors in example citation

--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -37,5 +37,5 @@ bibtex: |-
     title = {hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations},
     journal = {Journal of Open Source Software}
   }
-citation: "Moreno et al., (2022). hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software, 7(80), 4866, https://doi.org/10.21105/joss.04866"
+citation: "Moreno M.A., Dolson, E., & Ofria, C. (2022). hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software, 7(80), 4866, https://doi.org/10.21105/joss.04866"
 ---
