--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -40,6 +40,7 @@ bibtex: |-
 citation: "Moreno M.A., Dolson, E., & Ofria, C. (2022). hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software, 7(80), 4866, https://doi.org/10.21105/joss.04866"
 supporting_materials: |
   - [repository](https://github.com/mmore500/hstrat) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
+  - [documentation](https://hstrat.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
   - [source archive](https://doi.org/10.5281/zenodo.7416592) via [Zenodo *z*](https://zenodo.org)
   - [pre-review](https://github.com/openjournals/joss-reviews/issues/4860) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
   - [review](https://github.com/openjournals/joss-reviews/issues/4866) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
