Fixup bibtex and cites for alife conf papers

--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -26,17 +26,18 @@ abstract: |
 bibtex: |-
   @inproceedings{moreno2023toward,
     author = {Moreno, Matthew Andres and Dolson, Emily and Rodriguez-Papa, Santiago},
-    title = "{Toward Phylogenetic Inference of Evolutionary Dynamics at Scale}",
-    volume = {ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference},
-    series = {ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference},
-    pages = {79},
+    title = {Toward Phylogenetic Inference of Evolutionary Dynamics at Scale},
+    booktitle = {The 2023 Conference on Artificial Life},
+    collection = {ALIFE 2023},
+    publisher = {MIT Press},
+    pages = {568-668},
     year = {2023},
     month = {07},
     doi = {10.1162/isal_a_00694},
     url = {https://doi.org/10.1162/isal\_a\_00694},
     eprint = {https://direct.mit.edu/isal/proceedings-pdf/isal/35/79/2149068/isal\_a\_00694.pdf},
   }
-citation: 'Matthew Andres Moreno, Emily Dolson, Santiago Rodriguez-Papa; July 24–28, 2023. "Toward Phylogenetic Inference of Evolutionary Dynamics at Scale." Proceedings of the ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference. ALIFE 2023: Ghost in the Machine: Proceedings of the 2023 Artificial Life Conference. Online. (pp. 79). ASME. https://doi.org/10.1162/isal_a_00694'
+citation: 'Moreno, M. A., Dolson, E., & Rodriguez-Papa, S. (2023). Toward Phylogenetic Inference of Evolutionary Dynamics at Scale. In The 2023 Conference on Artificial Life. MIT Press. https://doi.org/10.1162/isal_a_00694'
 supporting_materials: |
   - [data](https://osf.io/vtxwd/) [via Open Science Framework ❋](https://osf.io)
   - [source code](https://github.com/mmore500/hstrat-evolutionary-inference/tree/v1.0.0) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
