--- a/blog_efflux/_posts/2023-07-24-moreno2023toward.md
+++ b/blog_efflux/_posts/2023-07-24-moreno2023toward.md
@@ -4,8 +4,8 @@ title: "Toward Phylogenetic Inference of Evolutionary Dynamics at Scale"
 date: 2023-07-24
 permalink: "/pubs/:title"
 category: conference
-download: https://github.com/mmore500/hstrat-evolutionary-inference/releases/download/camera-ready/hstrat-evolutionary-inference-manuscript.pdf
-view_publisher: https://direct.mit.edu/isal/proceedings/isal/35/79/116807
+download: https://direct.mit.edu/isal/proceedings-pdf/isal2023/35/79/2355073/isal_a_00694.pdf
+view_publisher: https://doi.org/10.1162/isal_a_00694
 doi: "10.1162/isal_a_00694"
 authors:
   - Matthew Andres Moreno
