Add DOI links to citations

--- a/blog_efflux/_posts/2024-05-16-moreno2024guide.md
+++ b/blog_efflux/_posts/2024-05-16-moreno2024guide.md
@@ -37,7 +37,7 @@ bibtex: |-
         archivePrefix={arXiv},
         primaryClass={cs.NE}
   }
-citation: "Moreno, M. A., Ranjan, A., Dolson, E., & Zaman, L. (2024). A Guide to Tracking Phylogenies in Parallel and Distributed Agent-based Evolution Models. arXiv preprint arXiv:2405.10183."
+citation: "Moreno, M. A., Ranjan, A., Dolson, E., & Zaman, L. (2024). A Guide to Tracking Phylogenies in Parallel and Distributed Agent-based Evolution Models. arXiv preprint arXiv:2405.10183. https://doi.org/10.48550/arXiv.2405.10183"
 supporting_materials: |
   - [manuscript source](https://github.com/mmore500/hstrat-reconstruction-quality/) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
   - [code and notebooks](https://github.com/mmore500/hstrat-reconstruction-quality/) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
