Update software listings with cites and docs

--- a/blog_efflux/_posts/2018-01-01-dishtiny.md
+++ b/blog_efflux/_posts/2018-01-01-dishtiny.md
@@ -16,4 +16,7 @@ projects:
   - in-browser
 description: |
   C++ library for digital evolution simulations studying digital multicellularity and fraternal major evolutionary transitions in individuality.
+supporting_materials: |
+  - [documentation](https://dishtiny.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
+  - [web interface](https://mmore500.com/dishtiny/) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
 ---
