--- a/blog_efflux/_posts/2020-01-01-conduit.md
+++ b/blog_efflux/_posts/2020-01-01-conduit.md
@@ -14,4 +14,6 @@ projects:
   - conduit
 description: |
   C++ library that wraps intra-thread, inter-thread, and inter-process communication in a uniform, modular, object-oriented interface, with a focus on asynchronous high-performance computing applications.
+supporting_materials: |
+  - [documentation](https://uit.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
 ---
