--- a/blog_efflux/_posts/2022-01-01-hstrat.md
+++ b/blog_efflux/_posts/2022-01-01-hstrat.md
@@ -16,15 +16,19 @@ projects:
   - libraries
   - hstrat
 bibtex: |-
-  @article{moreno2022hereditary,
-    author = {Moreno, Matthew Andres and Dolson, Emily and Ofria, Charles},
-    doi = {https://doi.org/10.1162/isal_a_00550},
-    journal = {Proceedings of the ALIFE 2022: The 2022 Conference on Artificial Life},
-    month = {7},
-    pages = {64--74},
-    title = {{Hereditary Stratigraphy: Genome Annotations to Enable Phylogenetic Inference over Distributed Populations}},
-    volume = {Proceedings of the ALIFE 2022: The 2022 Conference on Artificial Life},
-    year = {2022}
+  @article{moreno2022hstrat,
+    doi = {10.21105/joss.04866},
+    url = {https://doi.org/10.21105/joss.04866},
+    year = {2022},
+    publisher = {The Open Journal},
+    volume = {7},
+    number = {80},
+    pages = {4866},
+    author = {Matthew Andres Moreno and Emily Dolson and Charles Ofria},
+    title = {hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations},
+    journal = {Journal of Open Source Software}
   }
-citation: "Moreno, M. A., Dolson, E., & Ofria, C. (2022). Hereditary Stratigraphy: Genome Annotations to Enable Phylogenetic Inference over Distributed Populations. Proceedings of the ALIFE 2022: The 2022 Conference on Artificial Life, Proceedings of the ALIFE 2022: The 2022 Conference on Artificial Life(), 64–74. https://doi.org/https://doi.org/10.1162/isal_a_00550"
+citation: "Moreno M.A., Dolson, E., & Ofria, C. (2022). hstrat: a Python Package for phylogenetic inference on distributed digital evolution populations. Journal of Open Source Software, 7(80), 4866, https://doi.org/10.21105/joss.04866"
+supporting_materials: |
+  - [documentation](https://hstrat.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
 ---
