--- a/blog_efflux/_posts/2022-01-01-keyname.md
+++ b/blog_efflux/_posts/2022-01-01-keyname.md
@@ -12,4 +12,6 @@ projects:
   - libraries
 description: |
   keyname helps easily pack and unpack metadata in a filename.
+supporting_materials: |
+  - [documentation](https://keyname.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
 ---
