--- a/blog_efflux/_posts/2020-01-01-teeplot.md
+++ b/blog_efflux/_posts/2020-01-01-teeplot.md
@@ -23,4 +23,7 @@ bibtex: |-
 citation: Matthew Andres Moreno. (2023). mmore500/teeplot. Zenodo. https://doi.org/10.5281/zenodo.10440670
 description: |
   teeplot wrangles your data visualizations out of notebooks for you.
+supporting_materials: |
+  - [documentation](https://github.com/mmore500/teeplot/blob/master/README.rst)
+  - [*Tips and Tricks to Organize Jupyter Notebook Visualizations*](https://towardsdatascience.com/an-easier-way-to-wrangle-jupyter-notebook-visualizations-620a86cd9279), [article via towards data science](https://medium.com/towards-data-science)
 ---
