--- a/blog_efflux/_posts/2023-12-22-outset.md
+++ b/blog_efflux/_posts/2023-12-22-outset.md
@@ -24,5 +24,8 @@ bibtex: |-
   }
 citation: "Matthew Andres Moreno. (2023). mmore500/outset. Zenodo. https://doi.org/10.5281/zenodo.10426106"
 supporting_materials: |
+  - [documentation](https://mmore500.com/outset/) [via GitHub Pages <i class="icon-github-1"></i>](https://pages.github.com/)
   - [*A Killer Fix for Scrunched Axes, Step-by-step*](https://towardsdatascience.com/unscrunch-your-axes-with-easy-multiscale-data-visualization-in-matplotlib-69a30e96c68f?source=friends_link&sk=df15b14b63ce5b5240e6058b5875f6ee), [article via towards data science](https://medium.com/towards-data-science)
+  - [*A Comprehensive Guide to Inset Axes in Matplotlib*](https://medium.com/towards-data-science/a-comprehensive-guide-to-inset-axes-in-matplotlib-87400e00a4e5), [article via towards data science](https://medium.com/towards-data-science)
+  - [*Let Your Data Breathe: Tips, tricks, & tools to level up your FacetGrid game*](https://medium.com/gitconnected/let-your-data-breathe-7a9129db7af9), [article via level up coding](https://levelup.gitconnected.com/)
 ---
