--- a/blog_efflux/_posts/2023-12-22-outset.md
+++ b/blog_efflux/_posts/2023-12-22-outset.md
@@ -26,6 +26,6 @@ citation: "Matthew Andres Moreno. (2023). mmore500/outset. Zenodo. https://doi.o
 supporting_materials: |
   - [documentation](https://mmore500.com/outset/) [via GitHub Pages <i class="icon-github-1"></i>](https://pages.github.com/)
   - [*A Killer Fix for Scrunched Axes, Step-by-step*](https://towardsdatascience.com/unscrunch-your-axes-with-easy-multiscale-data-visualization-in-matplotlib-69a30e96c68f?source=friends_link&sk=df15b14b63ce5b5240e6058b5875f6ee), [article via towards data science](https://medium.com/towards-data-science)
-  - [*A Comprehensive Guide to Inset Axes in Matplotlib*](https://medium.com/towards-data-science/a-comprehensive-guide-to-inset-axes-in-matplotlib-87400e00a4e5), [article via towards data science](https://medium.com/towards-data-science)
-  - [*Let Your Data Breathe: Tips, tricks, & tools to level up your FacetGrid game*](https://medium.com/gitconnected/let-your-data-breathe-7a9129db7af9), [article via level up coding](https://levelup.gitconnected.com/)
+  - [*A Comprehensive Guide to Inset Axes in Matplotlib*](https://towardsdatascience.com/a-comprehensive-guide-to-inset-axes-in-matplotlib-87400e00a4e5?source=friends_link&sk=506baec0b6c22d89603c8cf34c450ab5), [article via towards data science](https://medium.com/towards-data-science)
+  - [*Let Your Data Breathe: Tips, tricks, & tools to level up your FacetGrid game*](https://levelup.gitconnected.com/let-your-data-breathe-7a9129db7af9?source=friends_link&sk=d2502e33c4f929bb8112a3bca9ea8015), [article via level up coding](https://levelup.gitconnected.com/)
 ---
