Add links to source archives and cites to software

--- a/blog_efflux/_posts/2020-01-01-conduit.md
+++ b/blog_efflux/_posts/2020-01-01-conduit.md
@@ -14,6 +14,25 @@ projects:
   - conduit
 description: |
   C++ library that wraps intra-thread, inter-thread, and inter-process communication in a uniform, modular, object-oriented interface, with a focus on asynchronous high-performance computing applications.
+bibtex: |-
+  @inproceedings{moreno2021conduit,
+    author = {Moreno, Matthew Andres and Papa, Santiago Rodriguez and Ofria, Charles},
+    title = {Conduit: A C++ Library for Best-Effort High Performance Computing},
+    year = {2021},
+    isbn = {9781450383516},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3449726.3463205},
+    doi = {10.1145/3449726.3463205},
+    booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference Companion},
+    pages = {1795–1800},
+    numpages = {6},
+    keywords = {high performance computing, best-effort computing},
+    location = {Lille, France},
+    series = {GECCO '21}
+  }
+citation: "Matthew Andres Moreno, Santiago Rodriguez Papa, and Charles Ofria. 2021. Conduit: a C++ library for best-effort high performance computing. In Proceedings of the Genetic and Evolutionary Computation Conference Companion (GECCO '21). Association for Computing Machinery, New York, NY, USA, 1795–1800. https://doi.org/10.1145/3449726.3463205"
 supporting_materials: |
   - [documentation](https://uit.readthedocs.io/) [via ReadTheDocs 📖](https://readthedocs.org/)
+  - [source archive](https://zenodo.org/doi/10.5281/zenodo.4118607) [via Zenodo *z*](https://zenodo.org)
 ---
