--- a/blog_efflux/_posts/2020-01-01-teeplot.md
+++ b/blog_efflux/_posts/2020-01-01-teeplot.md
@@ -25,5 +25,6 @@ description: |
   teeplot wrangles your data visualizations out of notebooks for you.
 supporting_materials: |
   - [documentation](https://github.com/mmore500/teeplot/blob/master/README.rst)
+  - [source archive](https://doi.org/10.5281/zenodo.10440670) via [Zenodo *z*](https://zenodo.org)
   - [*Tips and Tricks to Organize Jupyter Notebook Visualizations*](https://towardsdatascience.com/an-easier-way-to-wrangle-jupyter-notebook-visualizations-620a86cd9279?source=friends_link&sk=6eca2ac2110dce5a903f1511227dae17), [article via towards data science](https://medium.com/towards-data-science)
 ---
