Fix Santiago's last name in bibtex
Closes #38

--- a/blog_efflux/_posts/2020-01-01-conduit.md
+++ b/blog_efflux/_posts/2020-01-01-conduit.md
@@ -16,7 +16,7 @@ description: |
   C++ library that wraps intra-thread, inter-thread, and inter-process communication in a uniform, modular, object-oriented interface, with a focus on asynchronous high-performance computing applications.
 bibtex: |-
   @inproceedings{moreno2021conduit,
-    author = {Moreno, Matthew Andres and Papa, Santiago Rodriguez and Ofria, Charles},
+    author = {Moreno, Matthew Andres and Rodriguez Papa, Santiago and Ofria, Charles},
     title = {Conduit: A C++ Library for Best-Effort High Performance Computing},
     year = {2021},
     isbn = {9781450383516},
