Fixup abstract vs description

--- a/blog_efflux/_posts/2023-09-01-bioio.md
+++ b/blog_efflux/_posts/2023-09-01-bioio.md
@@ -12,7 +12,7 @@ authors:
   - Matthew Andres Moreno
   - Mia Howard
   - Emma Carlson
-abstract: |
+description: |
   bI/O is a prison seminar outreach program coordinated by scientists at the University of Michigan to engage with the Parnall Correctional Facility in Jackson, MI.
   We work with prison officials to schedule sessions 2-3 times per semester.
   Each session, a panel of 3 researchers present a 15-20 minute talk about their science and career path in a seminar-style format.
