Link manuscript source code for conduit writeup

--- a/blog_efflux/_posts/2022-11-23-moreno2022best.md
+++ b/blog_efflux/_posts/2022-11-23-moreno2022best.md
@@ -40,4 +40,5 @@ citation: "Moreno, M. A., & Ofria, C. (2022). Best-Effort Communication Improves
 supporting_materials: |
   - [data](https://osf.io/7jkgp/) [via Open Science Framework ❋](https://osf.io)
   - [source code](https://github.com/mmore500/conduit) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
+  - [manuscript source](https://github.com/mmore500/conduit-quality-of-service-writeup) [via GitHub <i class="icon-github-1"></i>](https://github.com/)
 ---
