Fix bibtex to prevent breaking Santiago's last name

--- a/blog_efflux/_posts/2021-07-22-moreno2021case.md
+++ b/blog_efflux/_posts/2021-07-22-moreno2021case.md
@@ -23,7 +23,7 @@ abstract: |
   Our case study suggests a loose, sometimes divergent, relationship can exist among novelty, complexity, and adaptation.
 bibtex: |-
   @inproceedings{moreno2021case,
-    author = {Moreno, Matthew Andres and Rodriguez Papa, Santiago and Ofria, Charles},
+    author = {Moreno, Matthew Andres and {Rodriguez Papa}, Santiago and Ofria, Charles},
     title = {Case Study of Novelty, Complexity, and Adaptation in a Multicellular System},
     year = {2021},
     url = {http://workshops.alife.org/oee4/papers/moreno-oee4-camera-ready.pdf},
